--- a/GameBasedLearing/Assets/Tests/PlayMode/PlayMode.asmdef
+++ b/GameBasedLearing/Assets/Tests/PlayMode/PlayMode.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Tests",
+    "name": "PLayModeTests",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
@@ -10,7 +10,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "NSubstitute.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
